maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:17: error: not found: value sommeAngle
      sommeAngle -= 1
      ^Escaper:21: error: not found: value sommeAngle
  	sommeAngle += 1
        ^